// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiResizableContainer can adjust panel props 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be controlled externally 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be vertical 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--vertical testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:100%;height:50%"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press up or down to adjust panels size"
    class="euiResizableButton euiResizableButton--vertical"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:100%;height:50%"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have more than two panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:33%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:33%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:33%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      And again
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have scrollable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have toggleable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--collapsible euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:20%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Sidebar
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:80%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Sidebar content
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:50%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer toggleable panels can be configurable 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--collapsible euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:20%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Sidebar
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--horizontal"
    data-test-subj="euiResizableButton"
    id="resizable-button_generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="resizable-panel_generated-id"
    style="width:80%;height:auto"
  >
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiResizablePanel__content euiResizablePanel__content--scrollable"
    >
      Sidebar content
    </div>
  </div>
</div>
`;
